# docker-gcloudvision-oauth2proxy-demo

./: .gitignore  README.md  build_image.sh  docker-compose.yml  oauth2_proxy.cfg  oauth2_proxy.sample.cfg  run.sh  stats.sh  stop.sh
GCloudVision/: Cargo.toml  Dockerfile
GCloudVision/src/: main.rs  main.test.rs
Oath2-Proxy/: Dockerfile
Oauth2-Proxy/: Dockerfile
certs/: internal-developers.hai-techwares.com.csr  www.hai-techwares.com.crt  www.hai-techwares.com.key
oauth2_proxy.cfg/: oauth2_proxy.cfg
ssl/internal-developers/: ssl.conf
ssl/internal-developers/certs/: internal-developers.hai-techwares.com.crt  internal-developers.key
ssl/www/: ssl.conf
ssl/www/certs/: www.csr
vhost.d/: internal-developers.hai-techwares.com  internal-developers.hai-techwares.com_location  internal-developers.yourdomain.tld  my-routes.conf  www.hai-techwares.com  www.hai-techwares.com_location  www.yourdomain.tld
www/: index.html
www/gateway/: index.html
www/internal-developers/: index.html
www/www/: index.html
